--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -210,24 +210,24 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/Statistics/StatisticsRole" id="linkStatisticsRole" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                    <a class="dropdown-item" href="/Statistics/StatisticsClassByMajor" id="linkStatisticsRole" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-person-badge-fill"></i> Vai Trò
+                                        <i class="bi bi-grid"></i> Số Lượng Lớp
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/Statistics/StatisticsMajor" id="linkStatisticsMajor" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                    <a class="dropdown-item" href="/Statistics/StatisticsClassByYear" id="linkStatisticsMajor" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-diagram-2-fill"></i> Ngành Lớp Học 
+                                        <i class="bi bi-award"></i> Lớp Chủ Nhiệm
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/Statistics/StatisticsStatusStudent" id="linkStatisticsStatusStudent" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                    <a class="dropdown-item" href="/Statistics/StatisticsEvalution" id="linkStatisticsStatusStudent" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-book-half"></i> Trạng Thái SV
+                                        <i class="bi bi-star-fill"></i> Đánh Giá
                                     </a>
                                 </li>
                             </ul>
