--- a/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsClassByMajor.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsClassByMajor.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model CAPSTONE_TEAM01_2024.ViewModels.ClassListViewModel
+@{
     ViewData["Title"] = "Statistic Class By Major";
 }
 <style>
@@ -53,23 +54,37 @@
                 <div class="card-body">
                     <!-- ComboBox thiết kế -->
                     <div class="form-group">
-                        <label for="FromYearFilter" style="font-size: 14px; color: #555;">Từ Niên Khóa:</label>
+                        <label for="FromYearFilter" style="font-size: 14px; color: #555;">Từ Khóa:</label>
                         <select
                             id="FromYearFilter"
                             class=" form-select-lg"
                             onchange="filterTable()"
                         >
-                            <option selected="">Lựa Chọn Niên Khóa</option>
-                            <option selected="">2022-2025</option>
+                            <option selected="">Lựa chọn Khóa</option>
+                            @foreach (var term in ViewBag.AllTerms as List<string>)
+                            {
+                                var years = term.Split('-');
+                                var startYear = int.Parse(years[0]);
+                                var endYear = int.Parse(years[1]);
+                                var khóa = startYear - 1994;  
+                                <option value="@term">@($"K{khóa}")</option>
+                            }
                         </select>
-                        <label for="ToYearFilter" style="font-size: 14px; color: #555;">Đến Niên Khóa:</label>
+                        <label for="ToYearFilter" style="font-size: 14px; color: #555;">Đến Khóa:</label>
                         <select
                             id="ToYearFilter"
                             class=" form-select-lg"
                             onchange="filterTable()"
                         >
-                            <option selected="">Lựa Chọn Niên Khóa</option>
-                            <option selected="">2023-2026</option>
+                            <option selected="">Lựa chọn Khóa</option>
+                            @foreach (var term in ViewBag.AllTerms as List<string>)
+                            {
+                                var years = term.Split('-');
+                                var startYear = int.Parse(years[0]);
+                                var endYear = int.Parse(years[1]);
+                                var khóa = startYear - 1994;  
+                                <option value="@term">@($"K{khóa}")</option>
+                            }
                         </select>
                         <button
                             type="button"
@@ -85,7 +100,38 @@
                         </button>
                         
                     </div>
-                    
+                    <!-- Thông báo -->
+                    @if (TempData["Success"] != null)
+                    {
+                        <div class="alert-custom alert-custom-success alert-dismissible fade show" role="alert" id="successMessage">
+                            @TempData["Success"]
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    }
+
+                    @if (TempData["Error"] != null)
+                    {
+                        <div class="alert-custom alert-custom-error alert-dismissible fade show" role="alert" id="errorMessage">
+                            @TempData["Error"]
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    }
+
+                    @if (TempData["Warning"] != null)
+                    {
+                        <div class="alert-custom alert-custom-warning alert-dismissible fade show" role="alert" id="warningMessage">
+                            @TempData["Warning"]
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    }
+
+
                     <!-- Bảng thông tin (trống) -->
                     <table class="table table-striped table-hover">
                         <thead class="text-center">
