--- a/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsEvalution.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsEvalution.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model CAPSTONE_TEAM01_2024.ViewModels.ClassListViewModel
+@{
     ViewData["Title"] = "Statistic Evalution";
 }
 <style>
@@ -49,24 +50,38 @@
                 <div class="card-body">
                     <!-- ComboBox thiết kế -->
                     <div class="form-group">
-                        <label for="FromEvalutionFilter" style="font-size: 14px; color: #555;">Từ Niên Khóa:</label>
+                        <label for="FromEvalutionFilter" style="font-size: 14px; color: #555;">Từ Khóa:</label>
                         <select
                             id="FromEvalutionFilter"
                             class=" form-select-lg"
                             onchange="filterTable()"
                         >
-                            <option selected="">Lựa Chọn Niên Khóa </option>
-                            <option value="">2022-2025</option>
+                            <option selected="">Lựa chọn Khóa</option>
+                            @foreach (var term in ViewBag.AllTerms as List<string>)
+                            {
+                                var years = term.Split('-');
+                                var startYear = int.Parse(years[0]);
+                                var endYear = int.Parse(years[1]);
+                                var khóa = startYear - 1994; 
+                                <option value="@term">@($"K{khóa}")</option>
+                            }
                            
                         </select>
-                        <label for="ToEvalutionFilter" style="font-size: 14px; color: #555;">Đến Niên Khóa:</label>
+                        <label for="ToEvalutionFilter" style="font-size: 14px; color: #555;">Đến Khóa:</label>
                         <select
                             id="ToEvalutionFilter"
                             class=" form-select-lg"
                             onchange="filterTable()"
                         >
-                            <option selected="">Lựa Chọn Niên Khóa </option>
-                            <option value="">2024-2027</option>
+                            <option selected="">Lựa chọn Khóa</option>
+                            @foreach (var term in ViewBag.AllTerms as List<string>)
+                            {
+                                var years = term.Split('-');
+                                var startYear = int.Parse(years[0]);
+                                var endYear = int.Parse(years[1]);
+                                var khóa = startYear - 1994;  
+                                <option value="@term">@($"K{khóa}")</option>
+                            }
 
                         </select>
                         <button
@@ -82,6 +97,37 @@
                             <i class="bi bi-download"></i> Xuất File
                         </a>
                     </div>
+                    <!-- Thông báo -->
+                    @if (TempData["Success"] != null)
+                    {
+                        <div class="alert-custom alert-custom-success alert-dismissible fade show" role="alert" id="successMessage">
+                            @TempData["Success"]
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    }
+
+                    @if (TempData["Error"] != null)
+                    {
+                        <div class="alert-custom alert-custom-error alert-dismissible fade show" role="alert" id="errorMessage">
+                            @TempData["Error"]
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    }
+
+                    @if (TempData["Warning"] != null)
+                    {
+                        <div class="alert-custom alert-custom-warning alert-dismissible fade show" role="alert" id="warningMessage">
+                            @TempData["Warning"]
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    }
+
 
                     <!-- Bảng thông tin (trống) -->
                     <table class="table table-striped table-hover">
